<resources>
    <string name="app_name" translatable="false">MyTraining</string>

    <!-- Stringhe comuni -->
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="mins">mins</string>
    <string name="reps">reps</string>
    <string name="secs">secs</string>
    <string name="sets">sets</string>
    <string name="back">Back</string>
    <string name="Continue">continue</string>
    <string name="delete">Delete</string>

    <!-- Menu Activity -->
    <string name="workout">Workout</string>
    <string name="workout_description">Load your circuit and start training</string>
    <string name="chronometer">Chronometer</string>
    <string name="chronometer_description">Train with the classic stopwatch</string>
    <string name="tabata">Tabata</string>
    <string name="tabata_description">Start an high-intensity interval training</string>
    <string name="amrap">Amrap</string>
    <string name="amrap_description">How many round can you finish?</string>
    <string name="timer">Timer</string>
    <string name="timer_description">Set a timer and train</string>
    <string name="emom">Emom</string>
    <string name="emom_description">Every Minute on the Minute</string>
    <string name="concentric_phase">Concentric phase</string>
    <string name="concentric_phase_description">Scan concentric and eccentric phase</string>
    <string name="for_time">For Time</string>
    <string name="for_time_description">Finish the workout as quickly as you can</string>
    <string name="every">every</string>
    <string name="For">for</string>
    <string name="invalid_time">Invalid time entered</string>

    <!-- Chronometer activity -->
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Resume">Resume</string>

    <!-- Amrap activity -->
    <string name="round_completed_in">round completed in</string>
    <string name="many_round_completed">How many rounds have you completed?</string>

    <!-- Circuit activity e creator-->
    <string name="ready">Ready?</string>
    <string name="tap_to_start">Tap to start</string>
    <string name="finish">FINISH</string>
    <string name="add_one_exercise">You must add at least one exercise</string>
    <string name="exercise_name_error">Please enter the exercise name</string>
    <string name="circuit_creator_error">Please check the data entered</string>
    <string name="enter_exercise_name">Enter the name of the exercise</string>
    <string name="exercise">Exercise</string>
    <string name="this_exercise">This exercise</string>
    <string name="next_exercise">Next exercise</string>

    <!-- Stringhe usate nei timer -->
    <string name="current_round">Current Round</string>
    <string name="current_set">Current set</string>
    <string name="current_lap">Current lap</string>
    <string name="work">Work</string>
    <string name="rest">Rest</string>
    <string name="total_time">Total time</string>
    <string name="go_out">Go out?</string>
    <string name="not_able_to_recovery">You will not be able to recover your training data</string>
    <string name="not_yet">Not yet</string>
    <string name="finished">Finished</string>
    <string name="workout_completed">Workout completed</string>
    <string name="workout_completed_in">Workout completed in</string>

    <!-- Finish activity -->
    <string name="well_done">Well done!</string>
    <string name="subtitle_finish_activity">Save your workout or return to homepage to start another training</string>

    <!-- Help activity -->
    <string name="subtitle_help_activity">Workout manager and training timer</string>
    <string name="bug">Report a bug</string>
    <string name="vote">Vote on PlayStore</string>
    <string name="share">Share with your friends</string>
    <string name="report_bug">Report a bug</string>
    <string name="add_error">You must add at least one error to send the message</string>
    <string name="enter_error">Please enter at least one error</string>
    <string name="received_bug">Thanks! We have received your report</string>
    <string name="share_text">Hi! Have you tried this app? It is beautiful!</string>
    <string name="version">Version</string>

    <!-- Concentric activity -->
    <string name="concentric">conc</string>
    <string name="eccentric">ecc</string>
    <string name="Concentric">Concentric</string>
    <string name="Eccentric">Eccentric</string>

    <!-- Bug dialog -->
    <string name="bug_dialog">What error did you find?</string>

    <!-- Exercise list dialog -->
    <string name="your_workout">Your workout</string>

    <!-- Round recycler view -->
    <string name="Lap">Lap</string>

    <!-- Stringhe statiche per tutte le lingue -->
    <string name="toolbar_title" translatable="false">My Training</string>
    <string name="time_00_00_00" translatable="false">00:00:00</string>
    <string name="time_00_slash_00" translatable="false">00/00</string>
    <string name="start" translatable="false">Start</string>
    <string name="Superset">Superset</string>
    <string name="new_exercise">NEW EXERCISE</string>
    <string name="lap_times">Lap times</string>
    <string name="overal_time">Overal time</string>
    <string name="pause">pause</string>
    <string name="Reset">Reset</string>
    <string name="Create">Create</string>
    <string name="superset">Superset</string>
    <string name="first_exercise">First exercise</string>
    <string name="second_exercise">Second exercise</string>
    <string name="save">save</string>
    <string name="current_repetition">Current repetition</string>
    <string name="help">help</string>
    <string name="workouts">workouts</string>
    <string name="Title">Title</string>
    <string name="Beginner">Beginner</string>
    <string name="Simple">Simple</string>
    <string name="Apply_filter">Apply filters</string>
    <string name="Reset_Filter">Reset Filter</string>
    <string name="select_date_for_filter">Select date for filter</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="start_date" translatable="false">01/01/2000</string>
    <string name="ready_activity_text">The circuit will \nstarts in:</string>
    <string name="saved">saved</string>
    <string name="Home">Home</string>
    <string name="Saved">Saved</string>
    <string name="Workouts">Workouts</string>
    <string name="bodybuilding">bodybuilding</string>
    <string name="free_body">free body</string>
    <string name="stretching" translatable="false">stretching</string>
    <string name="functional_training">functional training</string>
    <string name="Difficulty">Difficulty</string>
    <string name="Muscles">Muscles</string>
    <string name="Sensation">Sensation</string>
    <string name="general_error">oops, something went wrong!</string>
    <string name="none_circuit_saved">None workout saved!\n\n  Hey! Now you can save your favourite workouts,  just starts a new workout and at the end saves it.</string>
    <string name="skip">skip</string>
    <string name="Apply">Apply</string>
    <string name="ABS">ABS</string>
    <string name="CHEST">CHEST</string>
    <string name="BICEPS">BICEPS</string>
    <string name="DELTOIDS">DELTOIDS</string>
    <string name="TRICEPS">TRICEPS</string>
    <string name="DORSALS">DORSALS</string>
    <string name="QUADRICEPS">QUADRICEPS</string>
    <string name="BUTTOCKS">BUTTOCKS</string>
    <string name="FEMORAL_BICEPS">FEMORAL BICEPS</string>
    <string name="LUMBAR">LUMBAR</string>
    <string name="NECK">NECK</string>
    <string name="SHOULDER">SHOULDERS</string>
    <string name="FEET">FEET</string>
    <string name="CALVES">CALVES</string>
    <string name="BEGINNER">BEGINNER</string>
    <string name="INTERMEDIATE">INTERMEDIATE</string>
    <string name="ADVANCED">ADVANCED</string>
    <string name="CARDIO">CARDIO</string>
    <string name="round_completed">"Round completed: "</string>
    <string name="item_removed">" Item was removed from the list."</string>
    <string name="leave_review">Do you want to leave a review?</string>
    <string name="leave_review_description">Your opinion is very important to us, please leave a review</string>
    <string name="remind_later">Remind me later</string>
    <string name="yes">Yes</string>

</resources>
